  documented, as is the other hidden argument, 'dep'. For buildcustom(), where
  this option was already used explicitly with a different meaning, the old
  behavior remains as the new behavior doesn't make much sense if the user is
  specifying their own fitting function anyway.
. Fix an error in calculating Wald p-values for ANOVA F scores affecting ndf >1

1.5

*** API change to the 'crit' function, which now has a new function signature
    (p,cur,alt)
*** Deprecate buildjulia due to the maintenance cost of duplicating all the
    important likelihood functions. You can code these yourself using
    buildcustom().
** Likelihood-ratio tests for random effects are now modeled as a mixture of
   chi squares (Stram & Lee 1994), rather than by dividing the p-value by 2.
   This makes a difference only for model terms with >1 change in df.
** PQL is okay with Gaussian errors (Breslow & Clayton 1993); this is now
   known to buildbam(), buildgam(), and buildgamm(). These now default to LRT,
   and give an error message with advice if errors are not Gaussian.
* Relax convergence tolerances for negative eigenvalues to -0.002 (mgcv and
  glmmTMB models only)
* Relax convergence tolerance for gradients to 0.04 (mgcv models only)
* Convergence messages are now more informative due to an added human-readable
  'reason' attribute
. re2mgcv no longer uses 'by', to possibly work around segmentation faults
. Progress messages are now word-wrapped properly
. Fix incorrect filtering of '...' for (g)lmtree models

1.4

*** The 'reduce.fixed' and 'reduce.random' arguments have been deprecated; use
    the 'include' argument instead
** Add new criterion 'devexp' (alias: 'deviance') based on the explained
   deviance. Modify buildbam() so that, in the generalized case, it only
   accepts this criterion. bam() and gam() with non-outer optimization use PQL,
   which was incorrectly permitted by the previous version of the PQL guard
** S3 and S4 method passthrough support